--- a/CodeCademy/Data Science Foundations Skill Path/Linear_Regression.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Linear_Regression.ipynb
@@ -31,7 +31,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "The line we will end up with will have a formula that looks like:\n",
     "```\n",
     "y = m*x + b\n",
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +56,8 @@
    ],
    "source": [
     "def get_y(m, b, x):\n",
-    "  pass\n",
+    "  y = m * x + b\n",
+    "  return y\n",
     "\n",
     "print(get_y(1, 0, 7) == 7)\n",
     "print(get_y(5, 10, 3) == 25)\n"
@@ -67,7 +67,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "Reggie wants to try a bunch of different `m` values and `b` values and see which line produces the least error. To calculate error between a point and a line, he wants a function called `calculate_error()`, which will take in `m`, `b`, and an [x, y] point called `point` and return the distance between the line and the point.\n",
     "\n",
     "To find the distance:\n",
@@ -82,13 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Write your calculate_error() function here"
+    "def calculate_error(m, b, point):\n",
+    "    x_point = point[0]\n",
+    "    y_point = point[1]\n",
+    "    y_value = get_y(m, b, x_point)\n",
+    "    y_dif = abs(y_point - y_value)\n",
+    "    return y_dif"
    ]
   },
   {
@@ -100,9 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "#this is a line that looks like y = x, so (3, 3) should lie on it. thus, error should be 0:\n",
     "print(calculate_error(1, 0, (3, 3)))\n",
@@ -125,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -149,13 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Write your calculate_all_error function here"
+    "def calculate_all_error(m, b, points):\n",
+    "    total_error = 0\n",
+    "    for point in points:\n",
+    "        total_error += calculate_error(m, b, point)\n",
+    "    return total_error"
    ]
   },
   {
@@ -167,9 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "4\n",
+      "18\n"
+     ]
+    }
+   ],
    "source": [
     "#every point in this dataset lies upon y=x, so the total error should be zero:\n",
     "datapoints = [(1, 1), (3, 3), (5, 5), (-1, -1)]\n",
@@ -212,21 +242,27 @@
    "source": [
     "The way Reggie wants to find a line of best fit is by trial and error. He wants to try a bunch of different slopes (`m` values) and a bunch of different intercepts (`b` values) and see which one produces the smallest error value for his dataset.\n",
     "\n",
-    "Using a list comprehension, let's create a list of possible `m` values to try. Make the list `possible_ms` that goes from -10 to 10 inclusive, in increments of 0.1.\n",
-    "\n",
-    "Hint (to view this hint, either double-click this cell or highlight the following white space): <font color=\"white\">you can go through the values in range(-100, 100) and divide each one by 10</font>\n",
-    "\n"
+    "Using a list comprehension, let's create a list of possible `m` values to try. Make the list `possible_ms` that goes from -10 to 10 inclusive, in increments of 0.1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10.0, -9.9, -9.8, -9.7, -9.6, -9.5, -9.4, -9.3, -9.2, -9.1, -9.0, -8.9, -8.8, -8.7, -8.6, -8.5, -8.4, -8.3, -8.2, -8.1, -8.0, -7.9, -7.8, -7.7, -7.6, -7.5, -7.4, -7.3, -7.2, -7.1, -7.0, -6.9, -6.8, -6.7, -6.6, -6.5, -6.4, -6.3, -6.2, -6.1, -6.0, -5.9, -5.8, -5.7, -5.6, -5.5, -5.4, -5.3, -5.2, -5.1, -5.0, -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4.0, -3.9, -3.8, -3.7, -3.6, -3.5, -3.4, -3.3, -3.2, -3.1, -3.0, -2.9, -2.8, -2.7, -2.6, -2.5, -2.4, -2.3, -2.2, -2.1, -2.0, -1.9, -1.8, -1.7, -1.6, -1.5, -1.4, -1.3, -1.2, -1.1, -1.0, -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4.0, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5.0, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6.0, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7.0, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 8.0, 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 9.0, 9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 10.0]\n"
+     ]
+    }
+   ],
    "source": [
-    "possible_ms = #your list comprehension here"
+    "possible_ms = [i/10 for i in range(-100, 101)]\n",
+    "print(possible_ms)"
    ]
   },
   {
@@ -238,13 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "possible_bs = #your list comprehension here"
+    "possible_bs = [i/10 for i in range(-200, 201)]"
    ]
   },
   {
@@ -272,10 +308,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smallest error found: 5.0\n",
+      "It uses the m value: 0.4 and the b value: 1.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "datapoints = [(1, 2), (2, 0), (3, 4), (4, 4), (5, 3)]\n",
+    "smallest_error = float(\"inf\")\n",
+    "best_m, best_b = 0, 0\n",
+    "for m in possible_ms:\n",
+    "    for b in possible_bs:\n",
+    "        temp_error = calculate_all_error(m, b, datapoints)\n",
+    "        if temp_error < smallest_error:\n",
+    "            smallest_error = temp_error\n",
+    "            best_m = m\n",
+    "            best_b = b\n",
+    "print(f\"Smallest error found: {smallest_error}\")\n",
+    "print(f\"It uses the m value: {best_m} and the b value: {best_b}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -300,10 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_y(best_m, best_b, 6))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,15 +381,6 @@
     "\n",
     "Now, Reggie can use this model to predict the bounce of all kinds of sizes of balls he may choose to include in the ball pit!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
